src/App.css
html {
  background-color: #DCEDC8;
  height: 100%;
}

body {
  height: 100%;
}

#root {
  height: 100%;
}

.App {
  display: flex;
  flex-direction: column;
  text-align: center;
  height: 100%;
}

.Main {
  flex: 1;
}

.Header {
  background-color: #5D4037;
  color: white;
  font-size: xx-large;
  padding: 48px;
}

.Cookie {
  animation: Spin-image infinite 20s linear;
  height: 80px;
}

.Box {
  display: inline-block;
  margin: 6px;
  width: fit-content;
  height: 150px;
  padding: 20px;
  color: white;
  border-radius: 16px;
}

.Label {
  font-size: 1.5em;
}

.Standard-text {
  font-size: large;
}

@keyframes Spin-image {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

.Button {
  background-color: #5D4037;
  font-size: larger;
  color: white;
  padding: 6px 12px 6px;
  margin: 6px;
  border-radius: 4px;
}

.Footer {
  flex: 0;
  background-color: #5D4037;
  color: white;
  width: 100%;
  padding: 6px 0 6px;
}

